@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Discoruage use of fragile thread features (rarely used)
+    - Skip fragile/discrouaged tests outside author testing.
+    - Document the above, and an env var to activate tests when desired
+
 0.000094  2017-11-29 18:51:54-08:00 America/Los_Angeles
 
     - No Changes since last trial
